kubernetes/apps/observability/victoria-logs/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: logs
  namespace: victoria-metrics
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure
  hostnames:
    - logs.ducknet.io
  rules:
    - matches:
        - path:
            type: Exact
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            path:
              type: ReplaceFullPath
              replaceFullPath: /select/vmui/
            statusCode: 302
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vmauth-vl-query
          port: 8427
